# rapidio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
rapidio/: CMakeLists.txt  PathUtils.hpp  Win32Handle.hpp  main.cpp  profile_main.cpp  rapidio.hpp  rapidio.sln  rapidio.vcxproj  rapidio.vcxproj.filters  test_main.cpp
rapidio/data/: SmallTextFile.txt
rapidio/src/: PathUtils.hpp  Win32Call.hpp  Win32Handle.hpp  rapidio.hpp  rapidioWin32.hpp
rapidio/testutils/: UniqueDirectory.h
